Bug 1445220 - Removed 'version' variable declaration as it was unused r=gerald

--HG--
extra : amend_source : ab250875490b6bcb93e6d9be69286192cb32031d